# normalize_qai_logs

./: .gitattributes  .gitignore  README.md  analytics.py  column_config.json  core.py  excel_writer.py  integrated.py  normalize_chatbot_logs.py  normalizer.py  pyproject.toml  run_pipeline.py  scratch_first_rows.txt  scratch_generate_config_full.py  scratch_headers.txt  scratch_inspect.py  sessionizer.py  writer.py
config/: column_config.json  common_config.json  system_commands.json  target_categories_template.json
docs/: design_specification.md
excel_generator/: core.py  excel_writer.py  integrated.py  normalize_chatbot_logs.py  normalizer.py  reader.py  sessionizer.py  writer.py
input_csv/: 20260519T071352-20260519T182604.csv  20260520T090340-20260520T210308.csv  20260521T091303-20260521T200525.csv  20260522T085654-20260522T183651.csv  20260525T090712-20260525T192743.csv  20260526T081440-20260527T000014.csv  20260527T080530-20260527T204106.csv  20260528T062021-20260528T221124.csv  20260529T071734-20260529T211624.csv  20260531T174849-20260531T174856.csv  20260601T092332-20260601T220421.csv  20260602T083629-20260602T162613.csv  20260603T091524-20260603T192656.csv  20260604T091826-20260604T212400.csv  20260605T085150-20260605T175759.csv
output_run/: analytics_category.csv  analytics_daily.csv  analytics_session_distribution.csv  feedback.csv  interactions.csv  manifest.json  reset_sessions.csv  retrieval_results.csv  【生成AI】実施記録分析シート_統合版_20260618145221.xlsx  【生成AI】実施記録分析シート_統合版_20260618145301.xlsx  【生成AI】実施記録分析シート_統合版_20260618150923.xlsx  (+7 more)
s3_fetcher/: fetch_csv.py  (+3 more)
(+17 files in other folders)
